<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/cart_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_1"
        android:layout_margin="10dp"
        android:textSize="25dp" />

    <TextView
        android:id="@+id/cart_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_2"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/cart_signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:background="@drawable/button_selector_cart_signin"
        android:padding="10dp"
        android:text="@string/sign_in"
        android:textSize="25sp"
        android:textColor="@color/white" />
    
    <TextView 
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/grey_5"/>

</LinearLayout>
