<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/login_item_subtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtotal"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/login_item_subtotal_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/cart_price"
        android:textColor="@color/orangered"
        android:textSize="30sp" />

    </RelativeLayout>
    
    <TextView
        android:id="@+id/login_item_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_info"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/login_item_checkout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_selector_signin"
        android:padding="10dp"
        android:text="@string/checkout"
        android:textColor="@color/white"
        android:textSize="25sp" />
    
        <TextView 
        android:id="@+id/line_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey"/>   
         
        <ListView
            android:id="@+id/login_item_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
             />

        <TextView 
        android:id="@+id/line_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_5"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

        <Button
            android:id="@+id/login_item_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/button_selector_createaccount"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/white"
            android:text="@string/editcart"
            android:textSize="25sp" />

         </LinearLayout>
        <TextView 
        android:id="@+id/line_3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="@color/grey_5"/>

</LinearLayout>
</ScrollView>