<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
     >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cloth_1" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/item_img"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="21dp"
            android:layout_centerVertical="true"
            android:maxLines="4"
            android:ellipsize="end"
            android:layout_toLeftOf="@+id/item_price"
            android:layout_toRightOf="@+id/item_img"
            android:text="@string/item_name"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/item_name"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="5dp"
            android:text="@string/cart_price" 
            android:textColor="@color/orangered"
            android:textSize="23dp"/>

        <TextView
            android:id="@+id/item_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/item_price"
            android:text="@string/qty"
            android:layout_below="@+id/item_price"
            android:layout_marginTop="30dp"
            android:textColor="@color/grey"
            android:textSize="20dp" />

    </RelativeLayout>

</LinearLayout>
