<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/wish_edit_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:src="@drawable/cloth_1" />

        <TextView
            android:id="@+id/wish_edit_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/wish_edit_img"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="21dp"
            android:layout_toLeftOf="@+id/wish_edit_price"
            android:layout_toRightOf="@+id/wish_edit_img"
            android:ellipsize="end"
            android:maxLines="4"
            android:text="@string/item_name"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/wish_edit_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/wish_edit_name"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/cart_price"
            android:textColor="@color/orangered"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/wish_edit_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/wish_edit_price"
            android:layout_below="@+id/wish_edit_img"
            android:background="@drawable/button_selector_qty"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:layout_marginBottom="15dp"
            android:text="@string/remove"
            android:textSize="15sp" />

    </RelativeLayout>

</LinearLayout>