<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF" >
      
    <RelativeLayout
        android:id="@+id/layout_title_bar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
         >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
             >
            
    
          <RelativeLayout
                android:id="@+id/layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/tv_cloth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloth"
                    android:layout_centerInParent="true"
                    android:textSize="12sp"
                    android:padding="3dp"
                    android:textStyle="italic"
                     />
           </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="12sp"
                    android:padding="3dp"
                    android:textStyle="italic"
                     />
           </RelativeLayout>
                
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/tv_desktop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/desktop"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:padding="3dp"
                    android:textSize="12sp"
                    android:textStyle="italic"
                     />
            </RelativeLayout>
                
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >
                <TextView
                    android:id="@+id/tv_laptop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/Laptop"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:textSize="12sp"      
                    android:textStyle="italic"
                     />
            </RelativeLayout>
            
             
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.1" >

                <ImageButton
                    android:id="@+id/btn_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/button_selector_mroe"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_horizontal"
                    android:background="#00000000"
                     />
                </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <ListView
        android:id="@+id/home_category_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:dividerHeight="1dp" >
    </ListView>

</LinearLayout>
